# end4train

./: .gitignore  TimsMonitor.spec  build.bat  build.ps1  compile_ksy.ps1  main.spec  ncat_test_connection.ps1  pyproject.toml  readme.md  run_uic.ps1
doc/diagrams/: classes.puml  end_component.puml  mpc_usecase.puml  overview_component.puml  packages.puml  vehicle_component.puml
kaitai/specs/: c_packet.ksy  d_packet.ksy  e_packet.ksy  ffff_packet.ksy  g_packet.ksy  i_packet.ksy  j_packet.ksy  log_file.ksy  p_packet.ksy  process_data.ksy  r_packet.ksy  record_array.ksy  record_object.ksy  s_packet.ksy  t_packet.ksy
qt_designer/: monitor_main_window.ui
src/end4train/: binary_parser.py  communication.py  create_kaitai_bindings.py  log_file.py  main.py  main_window.py  main_window_ui.py  map.py  monitor.py  p_packet.py  traces_model.py
src/end4train/app/: dataframe_model.py  device_connectors.py  main.py  monitor.py
src/end4train/communication/: constants.py  data_store.py  decode.py  errors.py  ksy.py  timestamp_conversion.py
src/end4train/communication/mock_device/: __init__.py  device.py  (+1 more)
src/end4train/designer/: monitor_main_window.ui
src/end4train/kaitai_struct_specs/: log_file.ksy  p_packet.ksy
src/end4train/parsers/: g_packet.py  log_file.py  p_packet.py  process_data.py  r_packet.py  record_array.py  record_object.py
src/end4train/serializers/: basic_packets.py  p_packet.py
src/end4train/ui/: main_window.py  main_window_ui.py  map.qml
test/: log_file.py  test_log_file.py  test_serialize.py
test/data/: logeot2
test/data/20240923/: eot.parquet
(+18 files in other folders)
